2004-10-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/tm.test: Rewrote the tests to actually perform syntax
	checks on the public API. Added a new test (currently failing) to
	indicate that the test suite is not complete yet.
	* library/tm.tcl (path): Rewrote to turn this command into an
	ensemble to make it faster and simpler.

2004-10-24  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCmdIL.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclTrace.c: defined new macros to get/set the flags of 
	variables. The only files that still access the flag values
	directly are tclCompCmds.c, tclCompile.c, tclProc.c and tclVar.c

2004-10-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_LogCommandInfo,Tcl_AddObjErrorInfo):
	Shift the initialization of errorCode to NONE to more central
	location.

	* generic/tclEvent.c (BgError,Tcl_BackgroundError,HandleBgErrors):
	Rewrite to build on the new TclGet/SetReturnOptions routines.

	* generic/tclResult.c (TclGetReturnOptions): Add call to
	Tcl_AddObjErrorInfo to be sure error fields are initialized.

	* generic/tclResult.c (TclTransferResult):
	Rewrite to build on the new TclGet/SetReturnOptions routines.

2004-10-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/tm.n: Tightened up the documentation.
	* tests/tm.test: Created (with partially dummy content) so TIP#189
	can be marked Final.

	* generic/tclNamesp.c (NsEnsembleImplementationCmd): Make
	ensembles cut their implementations out of error traces. This is
	the right thing to do more often than not.

2004-10-22  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl: Fixed a typo where the fallback time zone
	became ::localtime instead of :localtime.  Fixed a bug where
	time zone names containing hyphens could not be loaded.
	* tests/clock.test: Added regression test cases that covers
	both bugs.
	Thanks to Todd M. Helfter <tmh@jumpgate.itsp.purdue.edu> for
	finding these bugs.
	